TEST_PROGRAMS/VALID/08/arrays.go
package main;
var x [3]int;
func main(){
    x[0] = 1;
    x[1] = 2;
}
