TEST_PROGRAMS/INVALID/04/30.go
package main

func main() {
    //Illegal array type
    var x [1
            ]a
}
